--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,5 +1,5 @@
 # \u4ece\u9ad8\u5230\u5730\u4f4e OFF \u3001 FATAL \u3001 ERROR \u3001 WARN \u3001 INFO \u3001 DEBUG \u3001 TRACE \u3001 ALL
-log4j.rootLogger=INFO, stdout, logfile
+log4j.rootLogger=ERROR, stdout, logfile
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.File=D:/logs/sopango/log.log
@@ -16,10 +16,5 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=<%d{yyyy-MM-dd HH:mm:ss}> %-4r %-5p [%t] %37c %3x - %m%n
 
 #for mybatis
-#log4j.logger.org.springframework=debug
-log4j.logger.com.ihyoo=WARN
-#log4j.logger.org.springframework.jdbc.datasource.DataSourceTransactionManager=DEBUG
-log4j.logger.java.sql.ResultSet=INFO
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.com.sopango=DEBUG
+log4j.logger.org.mybatis=DEBUG
